# Horarios-Automaticos-Frontend

./: .env.production  .gitignore  docker-compose.yml  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: release.yml
e2e/: auth.spec.ts  schedule.spec.ts
public/: sw.js
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/api/: auth.ts  client.ts  generation.ts  members.ts  preferences.ts  schedule.ts  shiftTypes.ts
src/api/__tests__/: client.test.ts
src/components/: CatPaws.tsx  ConfigMenu.tsx  DayDetailPanel.tsx  DraftsSection.tsx  ErrorBoundary.tsx  GenerateDialog.tsx  HistorySection.tsx  MemberForm.tsx  PeriodSelector.tsx  ProfileMenu.tsx  ProtectedRoute.tsx  QuickStats.tsx  ScheduleCalendar.tsx  ScheduleGrid.tsx  ShiftSelector.tsx  ShiftTypeForm.tsx  ShiftsInfoWidget.tsx  ShiftsModal.tsx  TeamModal.tsx  Toast.tsx  UpdateChecker.tsx
src/components/__tests__/: ErrorBoundary.test.tsx
src/components/calendar/: DayView.tsx  MonthView.tsx  ShiftGroup.tsx  WeekView.tsx  (+1 more)
src/constants/: calendar.ts  colors.ts  index.ts  shifts.ts
src/hooks/: useCrudHandler.ts  useDashboardActions.ts  useDashboardModals.ts  useIsMobile.ts  useMaps.ts
src/layouts/: AppLayout.tsx
src/lib/: errorReporter.ts
src/pages/: ConfigPage.tsx  DashboardPage.tsx  LoginPage.tsx  SchedulePage.tsx  ShiftTypesPage.tsx  TeamPage.tsx
src/stores/: authStore.ts
src/types/: member.ts  preferences.ts  schedule.ts  shift.ts
(+21 files in other folders)
