[package]
name = "horarios-automaticos"
version = "1.0.0"
description = "Gestion automatica de horarios"
authors = ["Alberto02003"]
edition = "2021"

[lib]
name = "horarios_automaticos_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
